--- a/science-quiz/src/app/home/home.html
+++ b/science-quiz/src/app/home/home.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="container">
+  <h1>Quiz de Ciencia</h1>
+  <p>Pon a prueba tus conocimientos con estas preguntas de ciencia general.</p>
+  <a class="start-button" routerLink="/question/0">¡Comenzar el Juego!</a>
+</div>
